--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
+    "i18next": "^25.3.2",
+    "postcss": "^8.5.6",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.1",
+    "react-player": "^3.3.1",
+    "react-router-dom": "^7.7.1",
+    "stripe": "^18.3.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
