--- a/restaurant-webapp/package.json
+++ b/restaurant-webapp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "flag-icons": "^7.5.0",
     "i18next": "^25.3.2",
     "postcss": "^8.5.6",
     "qrcode.react": "^4.2.0",
