--- a/restaurant-webapp/package.json
+++ b/restaurant-webapp/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.9.0",
+    "@stripe/stripe-js": "^7.8.0",
     "autoprefixer": "^10.4.21",
     "flag-icons": "^7.5.0",
     "i18next": "^25.3.2",
