--- a/restaurant-webapp/package.json
+++ b/restaurant-webapp/package.json
@@ -13,13 +13,14 @@
     "@stripe/react-stripe-js": "^3.9.0",
     "@stripe/stripe-js": "^7.8.0",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "flag-icons": "^7.5.0",
-    "i18next": "^25.3.2",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.5.6",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-i18next": "^15.6.1",
     "react-player": "^3.3.1",
     "react-router-dom": "^7.7.1",
     "stripe": "^18.3.0",
